# mjlog

./: .coverage  .gitignore  AGENTS.md  HRDQSO_IMPLEMENTATION.md  HRD_QSO_MODEL.md  README.md  TESTING_QUICK_START.md  main.py  mjlog.env  mjlog.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 9898aeb59fcf_initial_migration_with_all_models.py
external_data/: .~lock.DXCC.xlsx#  DXCC.xlsx  bands.csv  modes.csv  submodes.csv
scripts/: build_ui.sh
src/mjlog/: __init__.py  cli.py  config.py  gui_bridge.md
src/mjlog/db/: loaders.py  models.py  session.py
src/mjlog/gui/: BUILD_UI.md  main_window.py  settings.py
src/mjlog/gui/ui/: __init__.py  main_window.ui  read_data_window.ui
src/mjlog/gui/windows/: countries_window.py  read_data_window.py
src/mjlog/remote_content/: big_cty.py
tests/: conftest.py
tests/db/: test_hrdqso.py  test_models.py
tests/fixtures/: factories.py
