[project]
name = "mjlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "psycopg2-binary>=2.9.0",
    "pyside6>=6.11.0",
    "sqlalchemy>=2.0.49",
    "tomli-w>=1.0.0",
]

[tool.setuptools]
packages = ["mjlog"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]
