[project]
name = "mjlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.1.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "pip>=26.0.1",
    "psycopg2-binary>=2.9.0",
    "pyside6>=6.11.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "tomli-w>=1.0.0",
]

[tool.setuptools]
packages = ["mjlog"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "alembic>=1.13.0",
    "flake8>=7.3.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]
